mall-cloud/k8s/infra-seata.yaml
apiVersion: v1
kind: Service
metadata:
  name: mall-seata
  namespace: mall-cloud
spec:
  selector:
    app: mall-seata
  ports:
    - port: 8091
      targetPort: 8091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-seata
  namespace: mall-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-seata
  template:
    metadata:
      labels:
        app: mall-seata
    spec:
      containers:
        - name: seata
          image: seataio/seata-server:1.8.0
          ports:
            - containerPort: 8091
          volumeMounts:
            - name: conf
              mountPath: /seata-server/resources
      volumes:
        - name: conf
          configMap:
            name: seata-config
